--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nyc --cache mocha --timeout=8000 --check-leaks test/**/*.js"
   },
   "bin": {
-    "cli-tutorial": "index.js"
+    "cli-tutorial": "bin/cmd.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "camelcase": "^4.1.0",
     "chalk": "^2.3.2",
+    "mocha": "^5.0.4",
+    "nyc": "^11.6.0",
     "require-dir": "^1.0.0",
     "shelljs": "^0.8.1",
     "yargs": "^11.0.0"
