--- a/scaffold/package.json
+++ b/scaffold/package.json
@@ -1,21 +1,14 @@
 {
-  "name": "[NAME]",
-  "version": "[VERSION]",
-  "description": "[DESCRIPTION]",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "start:dev": "nodemon server.js"
+  "name": "scaffold",
+  "version": "1.0.0",
+  "main": "index.js",
+  "bin": {
+    "scaffold": "index.js"
   },
-  "author": "[AUTHOR]",
-  "license": "[LICENSE]",
   "dependencies": {
-    "dotenv": "^2.0.0",
-    "hapi": "^16.1.0",
-    "hoek": "^4.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.11.0"
+    "caporal": "^0.3.0",
+    "colors": "^1.1.2",
+    "prompt": "^1.0.0",
+    "shelljs": "^0.7.7"
   }
 }
