--- a/scaffold/templates/node/default/package.json
+++ b/scaffold/templates/node/default/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "[NAME]",
-  "version": "[VERSION]",
-  "description": "[DESCRIPTION]",
+  "name": "1",
+  "version": "11",
+  "description": "1",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "start:dev": "nodemon server.js"
   },
-  "author": "[AUTHOR]",
-  "license": "[LICENSE]",
+  "author": "1",
+  "license": "1",
   "dependencies": {
     "dotenv": "^2.0.0",
     "hapi": "^16.1.0",
